--- a/tic-tac-toe/src/App.css
+++ b/tic-tac-toe/src/App.css
@@ -6,7 +6,14 @@ body {
 }
 
 .App {
-  width: 100%;
+  box-sizing: border-box;
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  grid-auto-rows: 1fr 1fr 3fr 2fr;
+  text-align: center;
+  font-family: sans-serif;
+  padding: 50px 50px 0 50px;
 }
 
 .board-input {
@@ -35,11 +42,24 @@ body {
   min-width: 0;
 }
 
-
 .board {
-  height: 500px;
-  width: 500px;
-  margin: 100px auto;
+  position: relative;
+  width: 45%;
+  margin: 0 auto;
+  max-height: 50vh;
+  max-width: 50vh;
+}
+
+.board:after {
+  content: "";
+  display: block;
+  padding-bottom: 100%
+}
+
+.board-interior {
+  position: absolute;
+  width: 100%;
+  height: 100%;
   display: grid;
   grid-gap: 1rem;
 }
@@ -48,15 +68,12 @@ body {
   background-color: black;
   color: white;
   position: relative;
+  display: grid;
+  justify-items: center;
+  align-items: center
 }
 
-.square p {
+.square svg {
   position: absolute;
-  bottom: 54px;
-  margin: 0;
-  width: 156px;
-  height: 156px;
-  font-size: 200px;
-  text-align: center;
-  font-family: sans-serif;
+  fill: #ffffff
 }
