--- a/tic-tac-toe/src/App.css
+++ b/tic-tac-toe/src/App.css
@@ -11,6 +11,7 @@ body {
   width: 100vw;
   height: 100vh;
   display: grid;
+  grid-gap: 1rem;
   grid-auto-rows: 1fr 1fr 4fr 2fr 1fr;
   text-align: center;
   padding: 25px 50px;
