--- a/josephus/src/App.scss
+++ b/josephus/src/App.scss
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: "Source Sans Pro";
-  font-size: 16px
+  font-size: 16px;
 }
 
 #root {
@@ -9,7 +9,8 @@ body {
   grid-template-columns: 2fr 3fr;
   position: absolute;
   height: 100%;
-  width: 100%
+  width: 100%;
+  min-width: 800px;
 }
 
 .sidebar {
@@ -108,20 +109,44 @@ body {
 }
 
 .diagram {
-  display: grid;
-  grid-template-columns: repeat(10, auto);
-  padding: 100px 10vw;
+  position: relative;
+  width: 100%;
+  font-size: 10px;
   .chair {
-    width: 20px;
+    width: 10px;
+    // padding: 0 2px;
+    left: 50%;
+    top: 50%;
+    position: absolute; 
     img {
       width: 100%
+    };
+    p {
+      position: relative;
+      top: -15px;
+      margin: 0;
     }
   };
   .marked {
-    width: 20px;
     opacity: .4;
-    img {
-      width: 100%
-    }
   }
 }
+
+// .diagram {
+//   height: 400px;
+//   width: 400px;
+//   border-radius: 50%;
+//   position: relative;
+// }
+
+// .chair {
+//   list-style: none;
+//   height: 10px;
+//   width: 10px;
+//   position: absolute;
+//   top: 50%;
+//   left: 50%;
+//   img {
+//     width: 100%;
+//   }
+// }
